feat: navbar feito;feat: tooltip feito;feat: sidebar home feito

--- a/changeTheWorld/changeTheWorld/src/app/posts/post-list/post-list.component.html
+++ b/changeTheWorld/changeTheWorld/src/app/posts/post-list/post-list.component.html
@@ -30,6 +30,33 @@
           <div class="button__see-later"></div>
         </div>
       </div>
+      <div class="card-post">
+        <div class="card-post__img-user">
+          <img class="img-user" src="assets/user-icon.jpg" alt="user icon" />
+        </div>
+        <div class="card-post__title">
+          A carro mais rapido da historia
+        </div>
+        <div class="card-post__description">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur rerum
+          voluptatibus dolorem deserunt cum aut, perferendis maxime officiis
+          voluptatum perspiciatis numquam quas impedit doloremque doloribus
+          praesentium sint quia suscipit odit.
+        </div>
+        <div routerLink="/post/details" class="card-post__img-principal">
+          <img
+            class="img-principal"
+            src="assets/post-img.jpg"
+            alt="image post"
+          />
+        </div>
+        <div class="card-post__buttons">
+          <div class="button__show"></div>
+          <div class="button__share"></div>
+          <div class="button__like"></div>
+          <div class="button__see-later"></div>
+        </div>
+      </div>
     </div>
   </section>
 
