--- a/changeTheWorld/changeTheWorld/src/app/posts/post-list/post-list.component.scss
+++ b/changeTheWorld/changeTheWorld/src/app/posts/post-list/post-list.component.scss
@@ -1,4 +1,4 @@
-@import '../../shared/grids/posts-list.scss';
+@import "../../shared/theme/grids/posts-list.scss";
 
 .section-posts {
   display: flex;
