--- a/changeTheWorld/changeTheWorld/src/app/shared/theme/grids/posts-details.scss
+++ b/changeTheWorld/changeTheWorld/src/app/shared/theme/grids/posts-details.scss
@@ -23,6 +23,9 @@
     .nav {
       grid-area: navbar;
       background-color: var(--color-1F2324);
+      position: fixed;
+      width: 100vw;
+      z-index: 99;
     }
   
     .post-title {
