--- a/changeTheWorld/changeTheWorld/src/app/shared/theme/grids/posts-editor.scss
+++ b/changeTheWorld/changeTheWorld/src/app/shared/theme/grids/posts-editor.scss
@@ -22,6 +22,9 @@
   .nav {
     grid-area: navbar;
     background-color: var(--color-1F2324);
+    position: fixed;
+    width: 100vw;
+    z-index: 99;
   }
 
   .post-title {
