--- a/changeTheWorld/changeTheWorld/src/app/shared/theme/grids/posts-list.scss
+++ b/changeTheWorld/changeTheWorld/src/app/shared/theme/grids/posts-list.scss
@@ -10,6 +10,9 @@
     .nav {
       grid-area: navbar;
       background-color: var(--color-1F2324);
+      position: fixed;
+      width: 100vw;
+      z-index: 99;
     }
   
     .sidebar{
