--- a/changeTheWorld/changeTheWorld/src/app/posts/post-list/sidebar/sidebar.component.scss
+++ b/changeTheWorld/changeTheWorld/src/app/posts/post-list/sidebar/sidebar.component.scss
@@ -1,7 +1,7 @@
 .info-user {
   width: 330px;
   height: 420px;
-  border: 2px solid white;
+  border: 2px solid var(--color-ED145B);
   margin: 24px;
   position: fixed;
 }
