--- a/changeTheWorld/changeTheWorld/src/app/shared/components/navbar/navbar.component.scss
+++ b/changeTheWorld/changeTheWorld/src/app/shared/components/navbar/navbar.component.scss
@@ -1,15 +1,14 @@
 .nav {
   display: flex;
-  width: 100%;
+  width: 98%;
   height: 100%;
   align-items: center;
   align-content: center;
-  justify-content: space-between;
 
   &-icon {
     &__home {
       height: 8vh;
-      width: 4%;
+      width: 5%;
       border-radius: 100px;
       margin: 5px 20px 5px 20px;
       cursor: pointer;
@@ -39,12 +38,17 @@
       height: 8vh;
       width: 15%;
       border-radius: 100px;
-      margin: 5px 15px 5px 15px;
+      margin: 5px 0px 5px 0px;
       cursor: pointer;
       position: relative;
 
       &:hover > * {
         display: block !important;
+      }
+
+      &:active,
+      &:focus {
+        outline: none;
       }
 
       .icon__contacts {
@@ -62,12 +66,17 @@
       height: 8vh;
       width: 15%;
       border-radius: 100px;
-      margin: 5px 15px 5px 15px;
+      margin: 5px 0px 5px 0px;
       cursor: pointer;
       position: relative;
 
       &:hover > * {
         display: block !important;
+      }
+
+      &:active,
+      &:focus {
+        outline: none;
       }
 
       .icon__projects {
@@ -85,12 +94,17 @@
       height: 8vh;
       width: 15%;
       border-radius: 100px;
-      margin: 5px 15px 5px 15px;
+      margin: 5px 0px 5px 0px;
       cursor: pointer;
       position: relative;
 
       &:hover > * {
         display: block !important;
+      }
+
+      &:active,
+      &:focus {
+        outline: none;
       }
 
       .icon__messages {
@@ -109,11 +123,16 @@
       height: 8vh;
       width: 15%;
       border-radius: 100px;
-      margin: 5px 15px 5px 15px;
+      margin: 5px 0px 5px 0px;
       cursor: pointer;
 
       &:hover > * {
         display: block !important;
+      }
+
+      &:active,
+      &:focus {
+        outline: none;
       }
 
       .icon__notify {
@@ -128,17 +147,31 @@
     }
 
     &__user {
-      border: 2px solid white;
       height: 8vh;
       width: 15%;
       border-radius: 100px;
-      margin: 5px 15px 5px 15px;
+      margin: 5px 0px 5px 0px;
       cursor: pointer;
+      position: relative;
+
+      &:active,
+      &:focus {
+        outline: none;
+      }
 
       &:hover > * {
         display: block !important;
       }
 
+      .icon__user {
+        width: 41px;
+        height: 41px;
+        fill: var(--color-ED145B);
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+      }
     }
   }
 
@@ -146,10 +179,7 @@
     justify-content: flex-end;
     display: flex;
     height: 100%;
-    width: 28%;
-    align-items: center;
-    align-content: center;
-    justify-content: space-between;
+    width: 40%;
   }
 
   &-search {
@@ -162,6 +192,11 @@
 }
 
 .tooltip--disable {
+  &:active,
+  &:focus {
+    outline: none;
+  }
+
   display: none;
-  animation: cubic-bezier(.17,.67,.78,-0.16);
+  animation: cubic-bezier(0.17, 0.67, 0.78, -0.16);
 }
