--- a/changeTheWorld/changeTheWorld/src/app/shared/components/tooltip-menu-user/tooltip-menu-user.component.scss
+++ b/changeTheWorld/changeTheWorld/src/app/shared/components/tooltip-menu-user/tooltip-menu-user.component.scss
@@ -1,27 +1,27 @@
 .tooltip {
-  text-align: center;
-  width: 75px;
+  width: 173px;
   color: white;
   background: var(--color-1F2324);
   border: 2px solid var(--color-ED145B);
   position: absolute;
-  bottom: -35px;
-  left: 50%;
-  height: 22px;
+  top: 57px;
+  left: -20%;
+  height: 100px;
   transform: translate(-50%, 0%);
   border-radius: 15px;
-  justify-content: center;
   display: flex;
+  -webkit-animation: cubic-bezier(0.17, 0.67, 0.78, -0.16);
   animation: cubic-bezier(0.17, 0.67, 0.78, -0.16);
-  z-index: 1;
+  padding: 6px;
+  z-index: 2;
 }
 
 .tooltip:after {
   content: "";
   display: block;
   position: absolute;
-  left: 50%;
-  bottom: 19px;
+  right: 11%;
+  top: -12px;
   transform: translate(-50%, 0%);
   width: 0;
   height: 0;
