--- a/changeTheWorld/changeTheWorld/src/styles.scss
+++ b/changeTheWorld/changeTheWorld/src/styles.scss
@@ -10,14 +10,13 @@ html {
   // Define 1 rem
   font-size: 62.5%;
   box-sizing: border-box;
-  font-family: 'MuseoModerno', cursive;
+  font-family: "MuseoModerno", cursive;
 }
 
-  
 :root {
-  --color-1F2324: #1F2324;
   --color-46494a: #46494a;
-  --color-E4E4E4: #E4E4E4;
-  --color-ED145B: #ED145B;
+  --color-1E2122: #1e2122;
+  --color-101010: #101010;
+  --color-E4E4E4: #e4e4e4;
+  --color-ED145B: #ed145b;
 }
-
