--- a/changeTheWorld/changeTheWorld/src/app/shared/components/navbar/navbar.component.html
+++ b/changeTheWorld/changeTheWorld/src/app/shared/components/navbar/navbar.component.html
@@ -9,7 +9,7 @@
   <div class="nav-search"></div>
 
   <div class="buttons">
-    <div class="nav-icon__projects">
+    <div class="nav-icon__projects" routerLink="/post/list/yours">
       <svg class="icon__projects">
         <use xlink:href="assets/sprite.svg#projects" />
       </svg>
