--- a/changeTheWorld/changeTheWorld/src/app/posts/post-list/post-list.component.html
+++ b/changeTheWorld/changeTheWorld/src/app/posts/post-list/post-list.component.html
@@ -1,7 +1,13 @@
 <div class="container">
   <app-navbar class="nav"></app-navbar>
-  <app-sidebar class="sidebar"></app-sidebar>
-  <section class="section-posts main">
+  <app-sidebar
+    [ngClass]="loader == true ? 'loader--disable' : 'loader--active'"
+    class="sidebar"
+  ></app-sidebar>
+  <section
+    [ngClass]="loader == true ? 'loader--disable' : 'loader--active'"
+    class="section-posts main"
+  >
     <div class="box-posts">
       <div class="card-post" *ngFor="let post of posts">
         <div class="card-post__img-user">
@@ -29,6 +35,11 @@
       </div>
     </div>
   </section>
-
-  <app-sidebar-right class="sidebar-right"></app-sidebar-right>
+  <app-sidebar-right
+    [ngClass]="loader == true ? 'loader--disable' : 'loader--active'"
+    class="sidebar-right"
+  ></app-sidebar-right>
+  <app-loader
+    [ngClass]="loader == true ? 'loader--active' : 'loader--disable'"
+  ></app-loader>
 </div>
