--- a/changeTheWorld/changeTheWorld/src/app/modulos/posts/posts-lists-yours/posts-lists-yours.component.scss
+++ b/changeTheWorld/changeTheWorld/src/app/modulos/posts/posts-lists-yours/posts-lists-yours.component.scss
@@ -1,4 +1,4 @@
-@import "../../shared/theme/grids/posts-list-yours.scss";
+@import "../../../shared/theme/grids/posts-list-yours.scss";
 
 .card {
   border: 2px solid var(--color-ED145B);
