--- a/changeTheWorld/changeTheWorld/src/app/shared/components/tooltip-menu-user/tooltip-menu-user.component.scss
+++ b/changeTheWorld/changeTheWorld/src/app/shared/components/tooltip-menu-user/tooltip-menu-user.component.scss
@@ -1,7 +1,7 @@
 .tooltip {
   width: 173px;
-  color: white;
-  background: var(--color-1F2324);
+  color: var(--color-E4E4E4);
+  background: var(--color-101010);
   border: 2px solid var(--color-ED145B);
   position: absolute;
   top: 57px;
