--- a/changeTheWorld/changeTheWorld/src/app/shared/components/tooltip/tooltip.component.scss
+++ b/changeTheWorld/changeTheWorld/src/app/shared/components/tooltip/tooltip.component.scss
@@ -1,8 +1,8 @@
 .tooltip {
   text-align: center;
   width: 75px;
-  color: white;
-  background: var(--color-1F2324);
+  color: var(--color-E4E4E4);
+  background: var(--color-101010);
   border: 2px solid var(--color-ED145B);
   position: absolute;
   bottom: -35px;
