--- a/changeTheWorld/changeTheWorld/src/app/modulos/posts/post-editor/post-editor.component.html
+++ b/changeTheWorld/changeTheWorld/src/app/modulos/posts/post-editor/post-editor.component.html
@@ -5,35 +5,34 @@
     class="box-inputs"
   >
     <div class="input">
-      <label class="input__label">Title</label>
+      <label class="input__label">Titulo</label>
       <input
         type="text"
         name="title"
         [(ngModel)]="post.title"
-        placeholder="Title"
+        placeholder="Titulo"
       />
     </div>
     <div class="input">
-      <label class="input__label">Description</label>
+      <label class="input__label">Descrição</label>
       <textarea
         type="text"
         [(ngModel)]="post.description"
-        placeholder="Description"
+        placeholder="Descrição"
       ></textarea>
     </div>
-    <div class="input">
-      <label class="input__label">Principal image</label>
-      <input
-        type="file"
-        (change)="changeFile($event)"
-        placeholder="Principal image"
-      />
+    <div class="gallery">
+      <label class="input__label">Galeria</label>
+      <div class="box-img" *ngFor="let img of post.files">
+        <img (click)="openExplorer(img)" [src]="img.data" alt="Imagem" />
+        <input
+          [id]="'image-'+img.id"
+          type="file"
+          (change)="changeFile($event, img)"
+          placeholder="Principal image"
+        />
+      </div>
     </div>
-    <!-- TODO: Completar campos -->
-    <!-- <div class="input">
-      <label class="input__label">Gallery</label>
-      <input type="file" placeholder="Principal image" />
-    </div> -->
   </div>
   <div
     [ngClass]="loader == true ? 'loader--disable' : 'loader--active'"
@@ -51,6 +50,6 @@
   ></app-loader>
   <app-snackbar
     (callbackClick)="confirmSnack()"
-    [ngClass]="loader == true ? 'loader--active' : 'loader--disable'"
+    [ngClass]="snackbar == true ? 'loader--active' : 'loader--disable'"
   ></app-snackbar>
 </div>
