--- a/changeTheWorld/changeTheWorld/src/app/shared/components/navbar/navbar.component.scss
+++ b/changeTheWorld/changeTheWorld/src/app/shared/components/navbar/navbar.component.scss
@@ -126,7 +126,7 @@
       margin: 5px 0px 5px 0px;
       cursor: pointer;
 
-      &:hover > * {
+      &:hover > *:not(.icon__notify--number) {
         display: block !important;
       }
 
@@ -143,6 +143,21 @@
         left: 50%;
         top: 50%;
         transform: translate(-50%, -50%);
+
+        &--number {
+          height: 18px;
+          width: 18px;
+          border-radius: 100px;
+          background: var(--color-E4E4E4);
+          position: absolute;
+          right: 15px;
+          top: 8px;
+          z-index: 9;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          font-weight: bold;
+        }
       }
     }
 
@@ -183,6 +198,7 @@
   }
 
   &-search {
+    cursor: text;
     border: 2px solid var(--color-ED145B);
     height: 40px;
     width: 60%;
