--- a/changeTheWorld/changeTheWorld/src/app/shared/theme/grids/posts-editor.scss
+++ b/changeTheWorld/changeTheWorld/src/app/shared/theme/grids/posts-editor.scss
@@ -1,15 +1,14 @@
 .container {
   display: grid;
   grid-template-columns:
-    minmax(35vh, 35vh) minmax(50vh, auto)
-    minmax(35vh, 35vh);
+    minmax(15vw, 20vw) minmax(70vw, 70vw) minmax(15vw, 20vw);
   grid-template-rows: 10vh minmax(70vh, auto) 10vh 10vh;
 
   grid-template-areas:
-    "navbar navbar navbar navbar"
-    "side box-inputs box-inputs side-right"
-    "side box-buttons box-buttons side-right"
-    "footer footer footer footer";
+    "navbar navbar  navbar"
+    "side box-inputs side-right"
+    "side box-buttons side-right"
+    "footer footer footer";
 
   background: linear-gradient(
     to right,
@@ -29,8 +28,9 @@
     grid-area: box-inputs;
     background-color: var(--color-1E2122);
     padding: 20px;
-    margin: 20px 0px 10px 0px;
+    margin: 10px 0px 10px 0px;
     border-radius: 23px;
+    width: 70vw;
   }
 
   .box-buttons {
