--- a/changeTheWorld/changeTheWorld/src/app/modulos/posts/post-list/post-list.component.scss
+++ b/changeTheWorld/changeTheWorld/src/app/modulos/posts/post-list/post-list.component.scss
@@ -182,3 +182,97 @@
     }
   }
 }
+
+.info-user {
+  top: 15%;
+  width: 330px;
+  height: 420px;
+  margin: 24px;
+  position: fixed;
+  border-left: 8px solid var(--color-ED145B);
+  border-right: 5px solid var(--color-ED145B);
+
+  &__img {
+    height: 40%;
+    width: 100%;
+    position: relative;
+
+    .img-user {
+      border: 3px solid var(--color-46494a);
+      left: 50%;
+      top: 50%;
+      position: absolute;
+      transform: translate(-50%, -50%);
+      height: 78%;
+      width: 40%;
+      border-radius: 100px;
+    }
+  }
+
+  &__welcome {
+    height: 20%;
+    width: 100%;
+    color: var(--color-E4E4E4);
+    font-size: 2.5rem;
+    padding: 25px;
+    text-align: center;
+  }
+
+  &__top-3 {
+    height: 18%;
+    width: 100%;
+    margin-bottom: 5px;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    cursor: pointer;
+    .top-3 {
+      color: var(--color-E4E4E4);
+      font-size: 1.5rem;
+      padding: 25px;
+      text-align: center;
+      height: 100%;
+      width: 80%;
+      border: 2px solid var(--color-ED145B);
+    }
+  }
+
+  &__yours-idea {
+    height: 20%;
+    width: 100%;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    cursor: pointer;
+    .yours-idea {
+      color: var(--color-E4E4E4);
+      font-size: 1.5rem;
+      padding: 15px;
+      text-align: center;
+      height: 76%;
+      width: 80%;
+      border: 2px solid var(--color-ED145B);
+    }
+  }
+}
+
+.info-user::after,
+.info-user::before {
+  content: "";
+  position: absolute;
+  z-index: 1;
+}
+
+.info-user::after {
+  bottom: 0;
+  right: 0;
+  border-top: 5px solid var(--color-ED145B);
+  width: 70%;
+}
+
+.info-user::before {
+  top: 0;
+  left: 0;
+  border-bottom: 8px solid var(--color-ED145B);
+  width: 70%;
+}
